--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #permite o flyway aceitar o estado atual do banco como baseline inicial
 spring.flyway.baseline-on-migrate=true
+
+api.security.token.secret=${JWT_SECRET:12345678}
